	  second time will raise the buddy list.  (Gabriel Schulhof)
	* Undo capability in the conversation window
	* The formatting toolbar has been reorganized to be more concise.
	* A new status area has been added to the top of conversations to
	  provide additional detail about the buddy, including buddy icon,
	  protocol and status message.

	Finch:
	* There's support for workspaces now (details in the manpage)
	* There's a new custom window manager, Irssi
	* Some improvements for tab-completion, tooltip and the password entries
	* Some bugs regarding search results fixed
	* A new DBus-script to create a docklet for finch

version 2.0.2 (06/14/2007):
	Pidgin:
	* Added a custom conversation font option to preferences
	* Fixed smiley ordering in the insert smiley popup to be more intuitive
	* Conversation->More menu items work for Chats as well as Buddies,
	  including those not on your buddy list
	* newline plugin should work better with conversation colors plugin now
	* Get Info on users now provides immediate feedback that something is
	  happening
	* Aliasing a buddy will not be interrupted by other buddy list activity
	* Using the -l option to log in to a specific account works better

	libpurple:
	* Moving an ICQ buddy from one group to another no longer
	  re-requests authorization from that person (Rene Hausleitner)
	* Added nullprpl, an example protocol plugin (Ryan Barrett)
	* Fixed SOCKS5 bug which caused Jabber file receiving to fail
	* Remove MSN's random "Authorization Failed" dialogs
	* Fix MSN to correctly detect incorrect passwords and disable the account
	* Get User Info on MSN is now more reliable & accurate
	* Updated SILC protocol to support SILC Toolkit 1.1 (Pekka Riikonen)
	* Fix for some QQ authentication problems
	* Fix for building on FreeBSD
	* Prevent "Logged in:" times for AIM buddies being ridiculously high
	* Updates and fixes to Bonjour support
	* Improve ICQ encoding support for some non-latin languages

	Finch: